# yul-sonatina

./: Cargo.toml  test_all.sh
.github/workflows/: ci.yml
src/: func.rs  lib.rs  main.rs
test_files/: data.snap  data.yul  erc20.snap  nested_object.snap  nested_object.yul  power.snap  power.yul
tests/: transpile.rs
