[package]
name = "yul-sonatina"
version = "0.1.0"
edition = "2021"

[dependencies]
yultsur = { git = "https://github.com/fe-lang/yultsur", branch = "parser" }
sonatina-ir = { git = "https://github.com/Y-Nak/sonatina", branch = "refactor-ir-writer", package = "sonatina-ir" }
sonatina-triple = { git = "https://github.com/Y-Nak/sonatina", branch = "refactor-ir-writer", package = "sonatina-triple" }
cranelift-entity = "0.112"
clap = { version = "4.5.22", features = ["derive"] }

[dev-dependencies]
dir-test = "0.4.0"
insta = { version = "1.41" }
