[package]
name = "yul-sonatina"
version = "0.1.0"
edition = "2021"

[dependencies]
yultsur = { git = "https://github.com/fe-lang/yultsur", branch = "parser" }
sonatina-ir = { git = "https://github.com/fe-lang/sonatina", branch = "main", package = "sonatina-ir" }
sonatina-triple = { git = "https://github.com/fe-lang/sonatina", branch = "main", package = "sonatina-triple" }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
dir-test = "0.4.0"
insta = { version = "1.41" }
